src/objects/Ride__c.object
<CustomObject>
    <label>Ride</label>
    <nameField>
        <displayFormat>Ride-{0}</displayFormat>
        <label>Ride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bike__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bike</label>
        <referenceTo>Customer_Bikes__c</referenceTo>
        <relationshipLabel>Rides</relationshipLabel>
        <relationshipName>Rides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rides</relationshipLabel>
        <relationshipName>Rides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <label>Weather</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Fog</fullName>
                </value>
                <value>
                    <fullName>Hail</fullName>
                </value>
                <value>
                    <fullName>Rain</fullName>
                </value>
                <value>
                    <fullName>Sleet</fullName>
                </value>
                <value>
                    <fullName>Snow</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>